--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     overflow: hidden;
 }
 .gameContainer{
-    background-image: url(bg.png);
+    background-image: url(bg.jpg);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
     width: 100%;
@@ -64,7 +64,7 @@ body{
     border-radius: 10px;
 }
 
-@keyframes .rocket{
+@keyframes rocket{
     0%{
         bottom: 0;
     }
