--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 .gameContainer{
     background-image: url(bg.jpg);
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    /* background-size: 100vw 100vh; */
     width: 100%;
     height: 100vh;
 }
